--- a/.github/workflows/GenerateReadme.yml
+++ b/.github/workflows/GenerateReadme.yml
@@ -2,6 +2,9 @@ name: Generate readme and push
 on:
   push:
     branches: [ master ]
+
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
     
 jobs:
   report:
