--- a/openid/values.yaml
+++ b/openid/values.yaml
@@ -13,8 +13,8 @@ image:
 
 openid:
   image:
-    repository: evry/oidc-proxy
-    tag: "v1.3.0"
+    repository: quay.io/oauth2-proxy/oauth2-proxy
+    tag: "v7.2.0"
 
   resources:
     limits:
@@ -24,25 +24,21 @@ openid:
       cpu: 10m
       memory: 64Mi
 
-  oidcAuthMethod: client_secret_basic
-  oidcRenewAccessTokenOnExpiry: true
-  proxyHost: 127.0.0.1
-  proxyPort: 8080
-  proxyProtocol: http
-  addHostHeader: true
-
+  provider: keycloak-oidc
+  upstream: "http://1270.0.0.1:8080"
+  reverseProxy: "true"
 
 deployment:
   enabled: true
   containerPort: 8080
-  resources: {}
+  resources: { }
 
 docDeployment:
   enabled: false
   containerPort: 8080
-  env: []
+  env: [ ]
 
-imagePullSecrets: []
+imagePullSecrets: [ ]
 nameOverride: ""
 fullnameOverride: ""
 
@@ -50,47 +46,47 @@ serviceAccount:
   # Specifies whether a service account should be created
   create: false
   # Annotations to add to the service account
-  annotations: {}
+  annotations: { }
   # The name of the service account to use.
   # If not set and create is true, a name is generated using the fullname template
   name: ""
 
-podAnnotations: {}
+podAnnotations: { }
 
-podSecurityContext: {}
-  # fsGroup: 2000
+podSecurityContext: { }
+# fsGroup: 2000
 
-securityContext: {}
+securityContext: { }
   # capabilities:
   #   drop:
   #   - ALL
   # readOnlyRootFilesystem: true
   # runAsNonRoot: true
-  # runAsUser: 1000
+# runAsUser: 1000
 
 service:
   enabled: true
   type: ClusterIP
   port: 80
   targetPort: proxy-port
-  annotations: {}
+  annotations: { }
 
 docService:
   enabled: false
   type: ClusterIP
   port: 80
   targetPort: container-port
-  annotations: {}
+  annotations: { }
 
 ingress:
   enabled: true
-  annotations: {}
+  annotations: { }
     # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
+  # kubernetes.io/tls-acme: "true"
   hosts:
     - host: chart-example.local
-      paths: []
-  tls: []
+      paths: [ ]
+  tls: [ ]
   #  - secretName: chart-example-tls
   #    hosts:
   #      - chart-example.local
@@ -105,9 +101,9 @@ autoscaling:
   targetCPUUtilizationPercentage: 80
   # targetMemoryUtilizationPercentage: 80
 
-nodeSelector: {}
+nodeSelector: { }
 
-tolerations: []
+tolerations: [ ]
 
 ## @param operator.podAffinityPreset Pod affinity preset
 ## Ref: https://kubernetes.io/docs/concepts/scheduling-eviction/assign-pod-node/#inter-pod-affinity-and-anti-affinity
@@ -139,4 +135,4 @@ nodeAffinityPreset:
   ##   - e2e-az1
   ##   - e2e-az2
   ##
-  values: []
+  values: [ ]
