--- a/openid/templates/ingress.yaml
+++ b/openid/templates/ingress.yaml
@@ -14,6 +14,7 @@ metadata:
     {{- include "service.labels" . | nindent 4 }}
   {{- with .Values.ingress.annotations }}
   annotations:
+    nginx.ingress.kubernetes.io/proxy-buffer-size: "8k"
     {{- toYaml . | nindent 4 }}
   {{- end }}
 spec:
