--- a/openid/templates/deployment.yaml
+++ b/openid/templates/deployment.yaml
@@ -50,6 +50,9 @@ spec:
             - '--insecure-oidc-allow-unverified-email=true'
             - '--pass-authorization-header=true'
             - '--set-authorization-header=true'
+            {{- if (.Values.openid.upstream) }}
+            - '--upstream={{ .Values.openid.upstream }}'
+            {{- end }}
           env:
             {{- if (.Values.openid.cookieSecret) }}
             - name: OAUTH2_PROXY_COOKIE_SECRET
@@ -80,10 +83,6 @@ spec:
             {{- if (.Values.openid.emailDomains) }}
             - name: OAUTH2_PROXY_EMAIL_DOMAINS
               value: {{ .Values.openid.emailDomains | quote}}
-            {{- end }}
-            {{- if (.Values.openid.upstream) }}
-            - name: OAUTH2_PROXY_UPSTREAM
-              value: {{ .Values.openid.upstream | quote}}
             {{- end }}
             {{- if (.Values.openid.reverseProxy) }}
             - name: OAUTH2_PROXY_REVERSE_PROXY
