--- a/openid/templates/deployment.yaml
+++ b/openid/templates/deployment.yaml
@@ -50,8 +50,7 @@ spec:
             - '--insecure-oidc-allow-unverified-email=true'
             - '--pass-authorization-header=true'
             - '--set-authorization-header=true'
-            {{- if (.Values.openid.redirect-url) }}
-            - '--redirect-url={{ .Values.openid.redirect-url }}'
+            {{- if (.Values.openid.redirectUrl) }}
             {{- end }}
             {{- if (.Values.openid.upstream) }}
             - '--upstream={{ .Values.openid.upstream }}'
