--- a/openid/templates/deployment.yaml
+++ b/openid/templates/deployment.yaml
@@ -56,6 +56,9 @@ spec:
             {{- if (.Values.openid.upstream) }}
             - '--upstream={{ .Values.openid.upstream }}'
             {{- end }}
+            {{- if (.Values.openid.skipProviderButton) }}
+            - '--skip-provider-button=true'
+            {{- end }}
           env:
             {{- if (.Values.openid.cookieSecret) }}
             - name: OAUTH2_PROXY_COOKIE_SECRET
