--- a/openid/templates/deployment.yaml
+++ b/openid/templates/deployment.yaml
@@ -62,6 +62,9 @@ spec:
             {{- if (.Values.openid.proxyPrefix) }}
             - '--proxy-prefix={{ .Values.openid.proxyPrefix }}'
             {{- end }}
+            {{- range .Values.openid.extraArgs }}
+            - '{{ . }}'
+            {{- end }}
           env:
             {{- if (.Values.openid.cookieSecret) }}
             - name: OAUTH2_PROXY_COOKIE_SECRET
