--- a/openid/templates/ingress.yaml
+++ b/openid/templates/ingress.yaml
@@ -10,6 +10,8 @@ metadata:
     {{- include "service.labels" . | nindent 4 }}
   {{- with .Values.ingress.annotations }}
   annotations:
+    nginx.ingress.kubernetes.io/proxy-buffer-size: 16k
+    nginx.ingress.kubernetes.io/proxy-buffers-number: '8'
     {{- toYaml . | nindent 4 }}
   {{- end }}
 spec:
