--- a/openid/templates/deployment.yaml
+++ b/openid/templates/deployment.yaml
@@ -31,6 +31,7 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       serviceAccountName: {{ include "service.serviceAccountName" . }}
+      automountServiceAccountToken: {{ .Values.serviceAccount.automount }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       {{- if (.Values.deployment.hostAliases) }}
@@ -45,6 +46,17 @@ spec:
       {{- end }}
       containers:
         - name: {{ .Chart.Name }}
+          securityContext:
+            runAsUser: 65532
+            runAsGroup: 65532
+            readOnlyRootFilesystem: true
+            allowPrivilegeEscalation: false
+            runAsNonRoot: true
+            seccompProfile:
+              type: RuntimeDefault
+            capabilities:
+              drop:
+                - ALL
           args:
             - '--http-address=0.0.0.0:4180'
             - '--insecure-oidc-allow-unverified-email=true'
@@ -131,10 +143,26 @@ spec:
           resources:
             {{- toYaml .Values.openid.resources | nindent 12 }}
 
-      {{- if (.Values.sidecar) }}
+      {{- if .Values.sidecar }}
         - name: {{ .Values.sidecar.name }}
           image: "{{ .Values.sidecar.image.repository }}:{{ .Values.sidecar.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          securityContext:
+            capabilities:
+              drop:
+                - ALL
+              {{- if (.Values.sidecar.securityContextAddCapabilities) }}
+              add:
+                {{- toYaml .Values.sidecar.securityContextAddCapabilities | nindent 16 }}
+              {{- end }}
+            readOnlyRootFilesystem: {{ .Values.sidecar.securityContext.readOnlyRootFilesystem }}
+            allowPrivilegeEscalation: {{ .Values.sidecar.securityContext.allowPrivilegeEscalation }}
+            runAsNonRoot: {{ .Values.sidecar.securityContext.runAsNonRoot }}
+            seccompProfile:
+              type: {{ .Values.sidecar.securityContext.seccompProfile }}
+            {{- if (.Values.sidecar.securityContext.extra) }}
+            {{- toYaml .Values.sidecar.securityContext.extra | nindent 12 }}
+            {{- end }}
           env: {{ if (not .Values.sidecar.env) }}[]{{ end }}
 
             {{- range $key, $value := .Values.sidecar.env }}
@@ -182,7 +210,21 @@ spec:
       {{- if .Values.deployment.enabled }}
         - name: {{ include "service.fullname" . }}
           securityContext:
-            {{- toYaml .Values.securityContext | nindent 12 }}
+            capabilities:
+              drop:
+                - ALL
+              {{- if (.Values.deployment.securityContextAddCapabilities) }}
+              add:
+                {{- toYaml .Values.deployment.securityContextAddCapabilities | nindent 16 }}
+              {{- end }}
+            readOnlyRootFilesystem: {{ .Values.deployment.securityContext.readOnlyRootFilesystem }}
+            allowPrivilegeEscalation: {{ .Values.deployment.securityContext.allowPrivilegeEscalation }}
+            runAsNonRoot: {{ .Values.deployment.securityContext.runAsNonRoot }}
+            seccompProfile:
+              type: {{ .Values.deployment.securityContext.seccompProfile }}
+            {{- if (.Values.deployment.securityContext.extra) }}
+            {{- toYaml .Values.deployment.securityContext.extra | nindent 12 }}
+            {{- end }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           env: {{ if (not .Values.deployment.env) }}[]{{ end }}
