--- a/openid/values.yaml
+++ b/openid/values.yaml
@@ -2,7 +2,7 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-replicaCount: 1
+replicaCount: 2
 docReplicaCount: 1
 
 image:
@@ -10,6 +10,9 @@ image:
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
+
+netpol:
+  enabled: true
 
 openid:
   image:
@@ -48,11 +51,32 @@ openid:
 deployment:
   enabled: true
   containerPort: 8080
-  resources: { }
+
+  securityContext:
+    readOnlyRootFilesystem: true
+    allowPrivilegeEscalation: false
+    runAsNonRoot: true
+    seccompProfile: RuntimeDefault
+  resources: {}
+
+sidecar:
+  enabled: false
+  containerPort: 7070
+  securityContext:
+    readOnlyRootFilesystem: true
+    allowPrivilegeEscalation: false
+    runAsNonRoot: true
+    seccompProfile: RuntimeDefault
+  resources: {}
 
 docDeployment:
   enabled: false
   containerPort: 8080
+  securityContext:
+    readOnlyRootFilesystem: true
+    allowPrivilegeEscalation: false
+    runAsNonRoot: true
+    seccompProfile: RuntimeDefault
   env: [ ]
 
 imagePullSecrets: [ ]
@@ -67,19 +91,12 @@ serviceAccount:
   # The name of the service account to use.
   # If not set and create is true, a name is generated using the fullname template
   name: ""
+  automount: false
 
 podAnnotations: { }
 
 podSecurityContext: { }
 # fsGroup: 2000
-
-securityContext: { }
-  # capabilities:
-  #   drop:
-  #   - ALL
-  # readOnlyRootFilesystem: true
-  # runAsNonRoot: true
-# runAsUser: 1000
 
 service:
   enabled: true
