--- a/openid/values.yaml
+++ b/openid/values.yaml
@@ -14,6 +14,9 @@ image:
 netpol:
   enabled: true
 
+serviceMonitor:
+  enabled: false
+
 openid:
   image:
     repository: quay.io/oauth2-proxy/oauth2-proxy
