--- a/openid/templates/netpol.yaml
+++ b/openid/templates/netpol.yaml
@@ -10,8 +10,69 @@ spec:
       {{- include "service.selectorLabels" . | nindent 6 }}
   policyTypes:
     - Ingress
+    - Egress
+  {{- if (.Values.netpol.ingress) }}
   ingress:
-    - ports:
-        - port: 4180 #OpenId default
-          protocol: TCP
+  {{- end }}
+  {{- range $key, $value := .Values.netpol.ingress }}
+  #  {{ $key }}
+  - from:
+    {{- if ($value.namespaceSelector) }}
+    - namespaceSelector:
+        matchLabels:
+    {{- end }}
+    {{- range $netpolKey, $netpolValue := $value.namespaceSelector}}
+    {{$netpolKey}}: {{$netpolValue}}
+    {{- end }}
+    {{- if ($value.podSelector) }}
+    podSelector:
+      matchLabels:
+    {{- end }}
+    {{- range $netpolKey, $netpolValue := $value.podSelector }}
+    {{$netpolKey}}: {{$netpolValue}}
+    {{- end }}
+    {{- if ($value.ipBlock) }}
+    - ipBlock:
+        cidr: {{ $value.ipBlock }}
+    {{- end }}
+    {{- if ($value.ports) }}
+    ports:
+    {{- end }}
+    {{- range $netpolKey, $netpolValue := $value.ports }}
+    - protocol: {{$netpolValue}}
+      port: {{$netpolKey}}
+    {{- end }}
+  {{- end }}
+  {{- if (.Values.netpol.egress) }}
+  egress:
+  {{- end }}
+  {{- range $key, $value := .Values.netpol.egress }}
+  #  {{ $key }}
+  - to:
+      {{- if ($value.namespaceSelector) }}
+      - namespaceSelector:
+          matchLabels:
+        {{- end }}
+        {{- range $netpolKey, $netpolValue := $value.namespaceSelector }}
+        {{$netpolKey}}: {{$netpolValue}}
+        {{- end }}
+        {{- if ($value.podSelector) }}
+        podSelector:
+          matchLabels:
+        {{- end }}
+        {{- range $netpolKey, $netpolValue := $value.podSelector }}
+        {{$netpolKey}}: {{$netpolValue}}
+        {{- end }}
+    {{- if ($value.ipBlock) }}
+    - ipBlock:
+        cidr: {{ $value.ipBlock }}
+    {{- end }}
+    {{- if ($value.ports) }}
+    ports:
+    {{- end }}
+    {{- range $netpolKey, $netpolValue := $value.ports }}
+    - protocol: {{$netpolValue}}
+      port: {{$netpolKey}}
+    {{- end }}
+  {{- end }}
 {{- end }}
