--- a/openid/values.yaml
+++ b/openid/values.yaml
@@ -11,9 +11,6 @@ image:
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
 
-netpol:
-  enabled: true
-
 serviceMonitor:
   enabled: false
 
@@ -81,6 +78,75 @@ docDeployment:
     runAsNonRoot: true
     seccompProfile: RuntimeDefault
   env: [ ]
+
+docNetpol:
+  ingress:
+    ingress:
+      namespaceSelector:
+        kubernetes.io/metadata.name: kube-system
+      podSelector:
+        app.kubernetes.io/instance: rke2-ingress-nginx
+      ports:
+        8080: TCP
+
+netpol:
+  enabled: true
+  ingress:
+    ingress-openid:
+      namespaceSelector:
+        kubernetes.io/metadata.name: kube-system
+      podSelector:
+        app.kubernetes.io/instance: rke2-ingress-nginx
+      ports:
+        4180: TCP
+
+#  ingress:
+#    name1:
+#      namespaceSelector:
+#        label1: value1
+#        label2: value2
+#      podSelector:
+#        label1: value1
+#        label2: value2
+#      ports:
+#        80: TCP
+#        443: UDP
+#    name2:
+#      namespaceSelector:
+#        label12: value12
+#        label22: value22
+#      ports:
+#        80: TCP2
+#        443: UDP2
+#    name3:
+#      ipBlock: 10.10.10.10/24
+#      ports:
+#        80: TCP2
+#        443: UDP2
+#
+#  egress:
+#    name1:
+#      namespaceSelector:
+#        label1: value1
+#        label2: value2
+#      podSelector:
+#        label1: value1
+#        label2: value2
+#      ports:
+#        80: TCP
+#        443: UDP
+#    name2:
+#      namespaceSelector:
+#        label12: value12
+#        label22: value22
+#      ports:
+#        80: TCP2
+#        443: UDP2
+#    name3:
+#      ipBlock: 10.10.10.10/24
+#      ports:
+#        80: TCP2
+#        443: UDP2
 
 imagePullSecrets: [ ]
 nameOverride: ""
