--- a/openid/templates/netpol.yaml
+++ b/openid/templates/netpol.yaml
@@ -21,16 +21,16 @@ spec:
     - namespaceSelector:
         matchLabels:
     {{- end }}
-    {{- range $netpolKey, $netpolValue := $value.namespaceSelector}}
-    {{$netpolKey}}: {{$netpolValue}}
-    {{- end }}
+          {{- range $netpolKey, $netpolValue := $value.namespaceSelector}}
+          {{$netpolKey}}: {{$netpolValue}}
+          {{- end }}
     {{- if ($value.podSelector) }}
     podSelector:
       matchLabels:
     {{- end }}
-    {{- range $netpolKey, $netpolValue := $value.podSelector }}
-    {{$netpolKey}}: {{$netpolValue}}
-    {{- end }}
+          {{- range $netpolKey, $netpolValue := $value.podSelector }}
+          {{$netpolKey}}: {{$netpolValue}}
+          {{- end }}
     {{- if ($value.ipBlock) }}
     - ipBlock:
         cidr: {{ $value.ipBlock }}
@@ -49,20 +49,20 @@ spec:
   {{- range $key, $value := .Values.netpol.egress }}
   #  {{ $key }}
   - to:
-      {{- if ($value.namespaceSelector) }}
-      - namespaceSelector:
-          matchLabels:
-        {{- end }}
-        {{- range $netpolKey, $netpolValue := $value.namespaceSelector }}
-        {{$netpolKey}}: {{$netpolValue}}
-        {{- end }}
-        {{- if ($value.podSelector) }}
-        podSelector:
-          matchLabels:
-        {{- end }}
-        {{- range $netpolKey, $netpolValue := $value.podSelector }}
-        {{$netpolKey}}: {{$netpolValue}}
-        {{- end }}
+    {{- if ($value.namespaceSelector) }}
+    - namespaceSelector:
+        matchLabels:
+      {{- end }}
+          {{- range $netpolKey, $netpolValue := $value.namespaceSelector }}
+          {{$netpolKey}}: {{$netpolValue}}
+          {{- end }}
+      {{- if ($value.podSelector) }}
+      podSelector:
+        matchLabels:
+      {{- end }}
+          {{- range $netpolKey, $netpolValue := $value.podSelector }}
+          {{$netpolKey}}: {{$netpolValue}}
+          {{- end }}
     {{- if ($value.ipBlock) }}
     - ipBlock:
         cidr: {{ $value.ipBlock }}
@@ -70,9 +70,28 @@ spec:
     {{- if ($value.ports) }}
     ports:
     {{- end }}
-    {{- range $netpolKey, $netpolValue := $value.ports }}
-    - protocol: {{$netpolValue}}
-      port: {{$netpolKey}}
-    {{- end }}
+      {{- range $netpolKey, $netpolValue := $value.ports }}
+      - protocol: {{$netpolValue}}
+        port: {{$netpolKey}}
+      {{- end }}
   {{- end }}
+{{- end }}
+---
+{{- if .Values.netpol.allowLetsEncrypt }}
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+  name: {{ include "service.fullname" . }}-lets-encrypt
+  namespace: {{ .Values.namespace | default "default" }}
+spec:
+  podSelector:
+    matchLabels:
+      acme.cert-manager.io/http01-solver: 'true'
+  policyTypes:
+    - Ingress
+  ingress:
+    - from:
+      ports:
+        - port: 8089
+          protocol: TCP
 {{- end }}
