--- a/openid/templates/deployment.yaml
+++ b/openid/templates/deployment.yaml
@@ -52,6 +52,8 @@ spec:
             readOnlyRootFilesystem: true
             allowPrivilegeEscalation: false
             runAsNonRoot: true
+            appArmorProfile:
+              type: RuntimeDefault
             seccompProfile:
               type: RuntimeDefault
             capabilities:
