Add support for custom pod labels in deployment templates

--- a/openid/templates/deployment.yaml
+++ b/openid/templates/deployment.yaml
@@ -25,6 +25,9 @@ spec:
         {{- end }}
       labels:
         {{- include "service.selectorLabels" . | nindent 8 }}
+        {{- with .Values.podLabels }}
+        {{- toYaml . | nindent 8 }}
+        {{- end }}
     spec:
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
