--- a/openid/templates/doc-deployment.yaml
+++ b/openid/templates/doc-deployment.yaml
@@ -21,6 +21,9 @@ spec:
       {{- end }}
       labels:
         {{- include "documentation.selectorLabels" . | nindent 8 }}
+        {{- with .Values.documentation.podLabels }}
+        {{- toYaml . | nindent 8 }}
+        {{- end }}
     spec:
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
