Add annotations to sealedsecrets (used by reflector)

--- a/openid/templates/sealedsecret.yaml
+++ b/openid/templates/sealedsecret.yaml
@@ -14,6 +14,10 @@ spec:
     data: null
     metadata:
       creationTimestamp: null
+      {{- with $value.annotations }}
+      annotations:
+{{- toYaml . | nindent 8 }}
+      {{- end }}
       name: {{ $name }}
       namespace: {{ $.Values.namespace | default "default" }}
     type: {{ $value.type | default "Opaque" }}
